# Neurimo

./: .dockerignore  .env.example  .gitignore  README.md  __init__.py  docker-compose.yml  requirements.txt
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 504bcd3e91b8_add_visit_number_to_visits.py  9137cf309ece_add_video_annotations.py  b21b516ce070_add_annotations_columns.py  c3a1f7e82d01_add_questionnaire_responses_json.py  c3a1f8e92d4b_add_probability_to_ml_predictions.py  d4b2g8f93e02_add_family_history_json.py  e5c3h9g04f03_update_risk_bucket_names.py  f6d4i0h15g04_recalculate_risk_buckets.py  fe00270ba9ca_init_schema.py  g7e5j1i26h05_fix_bucket_rounding.py
backend/app/: main.py
backend/app/api/: children.py  questionnaires.py  reports.py  videos.py  visits.py
backend/app/core/: database.py
backend/app/models/: __init__.py  child.py  ml_prediction.py  questionnaire.py  video.py  visit.py
backend/app/schemas/: child.py  questionnaire.py  report.py  video.py  visit.py
backend/app/services/: annotations.py  explanation_service.py  file_storage.py  guided_review.py  report_service.py
data/: labels.csv  manifest.csv
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx  index.css
ml/models/: movenet_singlepose_lightning_4.onnx
ml/src/: build_manifest.py  config.py
ml/tests/: __init__.py  conftest.py  test_free_play_features.py  test_geometry.py  test_signal_processing.py
worker/: Dockerfile  __init__.py  config.py  feature_pipeline.py  process_visits.py  reprocess_visits.py
(+66 files in other folders)
