[project]
name = "neurimo-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "python-multipart>=0.0.9",
  "PyJWT>=2.8",
  "numpy>=1.24",
]

[tool.pyright]
include = ["app", "alembic"]
extraPaths = ["."]
